[metadata]
name = 'eyapm'
version = '0.1.0'
description = ''
author = 'riag'
author_email = 'riag@163.com'
license = 'Apache-2.0'
url = 'https://github.com/_/eyapm'

[requires]
python_version = ['2.7', '3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
